<resources>
    <string name="app_name">BMI CALCULATOR</string>
    <string name="textview">Height</string>
    <string name="textview2">Weight</string>
    <string name="buttoncalculate">CALCULATE YOUR BMI</string>
    <string name="editText"></string>
    <string name="editText2"></string>
    <string name="textview3">Body Mass Index</string>
    <string name="imagebutton">Male</string>
    <string name="imagebutton2">Female</string>
    <string name="textview4">cm</string>
    <string name="textview5">kg</string>
    <string name="textview6">result</string>
    <string name="Metric">Metric</string>
    <string name="Imperial">Imperial</string>
    <string name="imageview">Imageview</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_records">Records</string>
    <string name="title_graph">Graph</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Date">Date</string>
    <string name="save">Save</string>
    <string name="heightinfo">Heightinfo</string>
    <string name="weightinfo">Weightinfo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
